--- a/Projects.json
+++ b/Projects.json
@@ -82,7 +82,7 @@
         {
             "id": 6,
             "title": "Bangla ChatBot",
-            "image": "",
+            "image": "https://i.ibb.co/Kqhx5ZD/image.png",
             "tools": [
                 "JavaScript",
                 "CSS",
